Update README.md
Add hint for changing build.xml.