@@ -25,3 +25,33 @@ at java.base/java.lang.reflect.Field.checkCanSetAccessible(Field.java:178)
 at java.base/java.lang.reflect.Field.setAccessible(Field.java:172)
 at com.infodesire.v20.pojo.Pojos.getFields(Pojos.java:338)
 ```
+
+For unit tests in ant:
+
+```
+    <target name="java9settings">
+    
+        <condition property="addOpensPropertsPart1" value="--add-opens">
+          <javaversion atleast="9"/>
+        </condition>
+        <property name="addOpensPropertsPart1" value="-Dummy1=1" />
+        <condition property="addOpensPropertsPart2" value="java.base/java.util=ALL-UNNAMED">
+          <javaversion atleast="9"/>
+        </condition>
+        <property name="addOpensPropertsPart2" value="-Dummy2=2" />
+    
+    </target>
+
+    <target
+        name="junit.run" 
+        depends="java9settings, javac, junit.compile"
+        >
+    
+        <junit fork="true">
+    
+          <jvmarg value="${addOpensPropertsPart1}" />
+          <jvmarg value="${addOpensPropertsPart2}" />
+          
+          ...
+```
+
